--- a/public/index.css
+++ b/public/index.css
@@ -16,7 +16,6 @@
 }
 
 .title {
-    letter-spacing: 0.1rem;
     font-size: 2.3rem;
 }
 
@@ -92,8 +91,6 @@ main {
     main {
         flex-direction: column;
         align-items: center;
-    }
-    .paths-container {
     }
     .path {
         width: 10rem;
